--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
+  },
+  "dependencies": {
+    "babel-preset-env": "^1.7.0"
   }
 }
